--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,7 @@
 					<h3><center>Telephone Service Planning and Installation Form</center></h3>
 					<br>
 					<br>
-                    <form id="contact-form" method="post" action="http://localhost:5000/send" role="form">
+                    <form id="contact-form" method="post" action="https://mta-it.herokuapp.com/send" role="form">
 
                         <div class="messages"></div>
 
